...
    <string name="user_login">LOGIN</string>
    <string name="user_register">REGISTER</string>
    <string name="user_login_account_hint">Account</string>
    <string name="user_login_password_hint">Password</string>
    <string name="user_points">Credits held：%1$d</string>
    <string name="bet_vs">vs.</string>
    <string name="bet_win_lose_record" translatable="false">(%1$d/%2$d)</string>
    <string name="bet_confirm">CONFIRM</string>
    <string name="bet_remain">Remaining Credits： %1$d</string>
    <string name="bet_warning_title">Warning</string>
    <string name="bet_warning_text">After placing a bet, it cannot be cancelled or changed. Are you sure you want to place the bet?</string>
    <string name="bet_warning_confirm">CONFIRM</string>
    <string name="bet_warning_cancel">@android:string/cancel</string>
    <string name="bet_no_record">No betting record found.</string>
    <string name="bet_ask_turn_table_title">Use Lucky Wheel</string>
...
